# git-practice

./: .env copy  .env.example  .gitignore  CONFLICT_SETUP.md  CONTRIBUTING.md  DASHBOARD_FEATURES.md  DASHBOARD_README.md  FINAL_SUMMARY.md  HOW_TO_TEST_CONFLICTS.md  INSTRUCTOR_NOTES.md  MERGE_CONFLICT_EXERCISE.md  README.md  SETUP_ENV.md  dashboard_app.py  economist.md  not_economist.md  pyproject.toml  requirements.txt
analysis/python/: README.md  fetch_worldbank_data.py  inflation_analysis.py
analysis/r/: README.md  fetch_fred_data.R  gdp_analysis.R  inflation_analysis.R
data/: mc_expectedinflation_sub.csv  mc_internationalreserves.csv  mc_mxnusd_5y.csv  mc_mxnusd_month.csv  mc_policy.csv  mc_policy_mxnusd.csv  mc_reserves&assets.csv
data/gdp/: mexico_gdp_sample.csv
data/growth/: gdppc.csv  sexenios_gdp.csv
data/inflation/: expectedinflation.csv  inpc.csv  inpc_core.csv  inpp.csv  mexico_inflation_sample.csv  weights.csv
data/unemployment/: mexico_unemployment_sample.csv
exercises/: exercise-1.md  exercise-2.md  exercise-3.md
hobbies/: README.md
r/: mc_expectedinflation_sub.R  mc_internationalreserves.R  mc_mxnusd.R  mc_policy.R  mc_policy_mxnusd.R  theme_skope.R
r/finance/: VaR.R
r/gdp/: cycles.R  gdp.R  gdppc_sexenios.R  global_gdp.R
r/inflation/: expectedinflation.R  expectedinflation_long.R  inflation.R  inpc.R  inpp.R  weights.R
r/labor/: labor-employment.R  labor-gap.R  labor-informality.R  labor-neet.R
reports/: README.md
resources/: git-cheatsheet.md  github-workflow.md
students/: README.md
visualizations/: README.md
(+2 files in other folders)
